# curry-monad

./: .gitignore  .gitmodules  LICENSE  README.md  hie.yaml  monadic-curry.cabal  stack.yaml
benchmarks/: AddNum5.curry  Makefile  NRev.curry  NoSharingAcrossND.curry  PermSort.curry  Queens.curry  Select.curry  YesSharingAcrossND.curry
src/: Classes.hs  HasPrimitiveInfo.hs  MemoizedCurry.hs  MemoizedCurry.hs-boot  MemoizedCurryBench.hs  MemoizedCurryTests.hs  Narrowable.hs  Narrowable.hs-boot  NormalForm.hs  Tree.hs
