cabal-version: 3.0
name:          monadic-curry
version:       0.1.0.0
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     (c) 2020-2021, Kai-Oliver Prott, Finn Teegen
maintainer:    kai.prott@hotmail.de
author:        Kai-Oliver Prott, Finn Teegen
category:      Language
build-type:    Simple
stability:     experimental

common deps
  hs-source-dirs: src
  build-depends:
    base             ^>= 4.14.0.0,
    ghc              ^>= 8.10.1,
    ghc-prim         ^>= 0.6.1,
    template-haskell ^>= 2.16.0,
    bytestring       ^>= 0.10.10.0,
    containers       ^>= 0.6.0,
    deque            ^>= 0.4.3,
    transformers     ^>= 0.5.6,
    mtl              ^>= 2.2.2,
    syb              ^>= 0.7.1,
    extra            ^>= 1.7.3,
    tree-monad       ^>= 0.3.1,
    kan-extensions   ^>= 5.2.2,
    sbv              ^>= 8.17,
    adjunctions      ^>= 4.4,
    criterion        ^>= 1.5.9.0,
    deepseq
  ghc-options:      -Wall -Wincomplete-uni-patterns
  default-language: Haskell2010
  other-extensions:
    TupleSections,
    RecursiveDo,
    EmptyCase,
    LambdaCase,
    OverloadedStrings,
    TypeFamilies,
    RankNTypes,
    ScopedTypeVariables,
    ExistentialQuantification,
    TypeOperators,
    FlexibleContexts,
    FlexibleInstances,
    UndecidableInstances,
    FunctionalDependencies,
    DeriveFunctor,
    DeriveGeneric,
    DeriveDataTypeable,
    GeneralizedNewtypeDeriving,
    DeriveAnyClass,
    EmptyDataDeriving,
    StandaloneDeriving,
    DefaultSignatures,
    MultiParamTypeClasses,
    TemplateHaskell
  other-modules:
    NormalForm
    Narrowable
    HasPrimitiveInfo

library
  import: deps
  exposed-modules:
    Classes
    Tree
    MemoizedCurry
    MemoizedCurryTests

executable test
  import: deps
  main-is: MemoizedCurryBench.hs
  ghc-options: -O2 -main-is MemoizedCurryBench
  other-modules:
    Classes
    Tree
    MemoizedCurry
    MemoizedCurryTests
